AP-22693: aggregations now accept negative numbers