@@ -64,6 +64,7 @@ import static org.knime.core.expressions.Ast.unaryOp;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -72,7 +73,6 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import java.util.stream.Stream;
 
 import org.antlr.v4.runtime.BaseErrorListener;
 import org.antlr.v4.runtime.CharStreams;
@@ -91,13 +91,17 @@ import org.knime.core.expressions.antlr.KnimeExpressionBaseVisitor;
 import org.knime.core.expressions.antlr.KnimeExpressionLexer;
 import org.knime.core.expressions.antlr.KnimeExpressionParser;
 import org.knime.core.expressions.antlr.KnimeExpressionParser.AggregationCallContext;
-import org.knime.core.expressions.antlr.KnimeExpressionParser.AtomContext;
+import org.knime.core.expressions.antlr.KnimeExpressionParser.AtomExprContext;
 import org.knime.core.expressions.antlr.KnimeExpressionParser.BinaryOpContext;
 import org.knime.core.expressions.antlr.KnimeExpressionParser.ColAccessContext;
+import org.knime.core.expressions.antlr.KnimeExpressionParser.ExprContext;
 import org.knime.core.expressions.antlr.KnimeExpressionParser.FlowVarAccessContext;
 import org.knime.core.expressions.antlr.KnimeExpressionParser.FullExprContext;
 import org.knime.core.expressions.antlr.KnimeExpressionParser.FunctionCallContext;
+import org.knime.core.expressions.antlr.KnimeExpressionParser.NamedAggregationArgContext;
+import org.knime.core.expressions.antlr.KnimeExpressionParser.NamedAggregationArgsContext;
 import org.knime.core.expressions.antlr.KnimeExpressionParser.ParenthesisedExprContext;
+import org.knime.core.expressions.antlr.KnimeExpressionParser.PositionalAggregationArgsContext;
 import org.knime.core.expressions.antlr.KnimeExpressionParser.UnaryOpContext;
 
 /**
@@ -226,6 +230,19 @@ final class Parser {
 
         @Override
         public Ast visitUnaryOp(final UnaryOpContext ctx) {
+            // Handle unary minus on numbers
+            if (ctx.getChild(0) instanceof TerminalNode op && op.getSymbol().getType() == KnimeExpressionParser.MINUS
+                && ctx.getChild(1) instanceof AtomExprContext arg) {
+
+                if (arg.atom().INTEGER() != null) {
+                    return integerConstant(-Long.parseLong(arg.getText().replace("_", "")),
+                        createData(getLocation(ctx)));
+                } else if (arg.atom().FLOAT() != null) {
+                    return floatConstant(-Double.parseDouble(arg.getText().replace("_", "")),
+                        createData(getLocation(ctx)));
+                }
+            }
+
             var arg = ctx.getChild(1).accept(this);
             var op = mapUnaryOperator(ctx.op);
             return unaryOp(op, arg, createData(getLocation(ctx)));
@@ -269,39 +286,43 @@ final class Parser {
 
         @Override
         public Ast visitAggregationCall(final AggregationCallContext ctx) {
+            final String ERROR_MESSAGE = "Arguments to aggregations must be literals";
 
-            var positionalArgs = //
-                Optional.ofNullable(ctx.aggregationArgs().positionalAggregationArgs()) //
-                    .map(paa -> paa.atom().stream()) //
-                    .orElseGet(Stream::empty) //
-                    .filter(a -> isLiteral(a)) //
-                    .map(a -> (ConstantAst)a.accept(this)) //
-                    .toList(); //
+            var positionalArgsOptional = Optional.ofNullable(ctx.aggregationArgs().positionalAggregationArgs()) //
+                .map(PositionalAggregationArgsContext::expr) //
+                .or(() -> Optional.of(List.<ExprContext> of())) //)
+                .filter(this::arePositionalArgsValid) //
+                .map(x -> x.stream().map(y -> (ConstantAst)y.accept(this)).collect(Collectors.toList()));
 
-            var namedArgs = //
-                Optional.ofNullable(ctx.aggregationArgs().namedAggregationArgs()) //
-                    .map(naa -> naa.namedAggregationArg().stream()) //
-                    .orElseGet(Stream::empty) //
-                    .filter(arg -> isLiteral(arg.atom())) //
-                    .collect( //
-                        Collectors.toMap( //
-                            // NB: The "=" is part of the text but we need to remove it
-                            arg -> removeLastChar(arg.argName.getText()), // identifier
-                            arg -> (ConstantAst)arg.atom().accept(this) // value
-                        ) //
-                    );
+            var namedArgsOptional = Optional.ofNullable(ctx.aggregationArgs().namedAggregationArgs()) //
+                .map(NamedAggregationArgsContext::namedAggregationArg) //
+                .or(() -> Optional.of(List.<NamedAggregationArgContext> of())) //
+                .filter(this::areNamedArgsValid) //
+                .map(x -> x.stream().collect(Collectors.toMap(y -> removeLastChar(y.argName.getText()),
+                    y -> (ConstantAst)y.expr().accept(this))));
 
-            var name = ctx.name.getText();
-            return aggregationCall(name, new Arguments<>(positionalArgs, namedArgs), createData(getLocation(ctx)));
+            if (positionalArgsOptional.isEmpty() || namedArgsOptional.isEmpty()) {
+                throw syntaxError(ERROR_MESSAGE, getLocation(ctx));
+            }
+
+            var aggregationName = ctx.name.getText();
+
+            return aggregationCall(aggregationName,
+                new Arguments<>(positionalArgsOptional.get(), namedArgsOptional.get()), createData(getLocation(ctx)));
         }
 
-        private static boolean isLiteral(final AtomContext atom) throws RuntimeSyntaxError {
-            if ( atom.ROW_ID() != null ||  atom.ROW_INDEX() != null || atom.ROW_NUMBER()  != null) {
-                throw syntaxError(
-                    "`ROW_ID`, `ROW_INDEX` and `ROW_NUMBER`" + " cannot be used as arguments for aggregation functions",
-                    getLocation(atom));
-            }
-            return true;
+        private boolean areNamedArgsValid(final Collection<NamedAggregationArgContext> args) {
+            return args.stream() //
+                .map(NamedAggregationArgContext::expr) //
+                .allMatch(this::isLiteral);
+        }
+
+        private boolean arePositionalArgsValid(final Collection<ExprContext> args) {
+            return args.stream().allMatch(this::isLiteral);
+        }
+
+        private boolean isLiteral(final ExprContext ctx) throws RuntimeSyntaxError {
+            return ctx.accept(this) instanceof ConstantAst;
         }
 
         private static String removeLastChar(final String str) {
